<resources>
    <string name="app_name">Cachogos</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Slider Intro One-->
    <string name="title_slider_one">Estoy solito</string>
    <string name="subtitle_subtitle_one">Ready to make the good action of the year?</string>

    <!--    Slider Intro Two-->
    <string name="title_slider_two">Me llevás a tu casa?</string>
    <string name="subtitle_subtitle_two">If you take me home with you, you won\'t regret it</string>

    <!--    Slider Intro three-->
    <string name="title">Adopción de perritos</string>
    <string name="subtitle">Make your life more happy with us to have a little new friend</string>

    <!--    Get Started Button-->
    <string name="get_started_button">Get started</string>

    <!--    Login Button-->
    <string name="login_ingresar_name">Ingresa tu nombre</string>

    <!--    Login -->
    <string name="login_title">Ingresa tu nombre</string>

    <!--    Login Button-->
    <string name="login_button">Login</string>

    <!--    Menú hamburguesa -->
    <string name="nav_header_hello">Hola</string>
    <string name="nav_header_username">Martín</string>
    <string name="nav_header_user">Usuario</string>
    <string name="nav_item_profile">Perfil</string>
    <string name="nav_item_setting">Configuración</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>

    <!-- Item Dog -->
    <string name="dog_item_photo_placeholder_description">Foto de </string>
    <string name="dog_item_favorite_selected_icon_description">Perro guardado como favorito</string>
    <string name="dog_item_favorite_unselected_icon_description">Perro no guardado como favorito</string>
    <string name="dog_item_age_label">Edad:</string>
    <string name="dog_item_sex_label">Género:</string>

    <!--    Dog Details -->
    <string name="dog_details_age_suffix_singular">\ año</string>
    <string name="dog_details_age_suffix_plural">\ años</string>
    <string name="dog_details_sex_label">Sexo</string>
    <string name="dog_details_weight_label">Peso</string>
    <string name="dog_details_weight_suffix">kg</string>
    <string name="dog_details_owner_label">Dueño</string>
    <string name="dog_details_call_owner_placeholder">Llamar al dueño</string>
    <string name="dog_details_put_to_adoption">Dar en adopción</string>
    <string name="dog_details_adopt_button">Adoptar</string>

    <!--    Configuración -->
    <string name="settings_view_header">Configuración</string>
    <string name="settings_group_general">Generales</string>
    <string name="settings_option_DM">Modo oscuro</string>

    <!--    Perfil -->
    <string name="profile_view_header">Perfil</string>
    <string name="profile_view_upload_photo">Subir foto</string>

    <!--    Publication Form-->
    <string name="form_title">Ingresar mascota</string>
    <string name="form_image">Imagen(URL)</string>
    <string name="form_name">Nombre</string>
    <string name="form_age">Edad</string>
    <string name="form_gender">Sexo</string>
    <string name="form_weight">Peso</string>
    <string name="form_location">Ubicación</string>
    <string name="form_breed">Raza de perro</string>
    <string name="form_sub_breed">Subraza de perro</string>
    <string name="form_description">Descripción</string>

    <!--    Seeker -->

    <string name="seeker_hint">Buscador</string>
    <string name="seeker_content_description">Boton Buscador</string>

    <!--    Filter -->
    <string name="filter_title">Filtros</string>
    <string name="filter_more_options">Más filtros</string>
    <string name="filter_modal_confirm">Confirmar</string>
    <string name="filter_modal_cancel">Cancelar</string>


    <!--    Form Button -->
    <string name="form_button">Crear</string>

    <string-array name="gender_options">
        <item>Macho</item>
        <item>Hembra</item>
    </string-array>

    <string-array name="argentine_provinces">
        <item>Buenos Aires</item>
        <item>Catamarca</item>
        <item>Chaco</item>
        <item>Chubut</item>
        <item>Córdoba</item>
        <item>Corrientes</item>
        <item>Entre Ríos</item>
        <item>Formosa</item>
        <item>Jujuy</item>
        <item>La Pampa</item>
        <item>La Rioja</item>
        <item>Mendoza</item>
        <item>Misiones</item>
        <item>Neuquén</item>
        <item>Río Negro</item>
        <item>Salta</item>
        <item>San Juan</item>
        <item>San Luis</item>
        <item>Santa Cruz</item>
        <item>Santa Fe</item>
        <item>Santiago del Estero</item>
        <item>Tierra del Fuego</item>
        <item>Tucumán</item>
    </string-array>

</resources>