<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout5"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yaundeCode.examenAdopcionApp.fragments.FormFragment">

    <TextView
        android:id="@+id/textFormTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/form_title"
        android:textSize="24sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:paddingBottom="40dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toTopOf="@id/saveButton"
        app:layout_constraintTop_toBottomOf="@id/textFormTitle"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textFormImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/editTextFormImage"
                android:text="@string/form_image"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editTextFormImage"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormImage" />

            <TextView
                android:id="@+id/textFormName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/editTextFormName"
                android:text="@string/form_name"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.136"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextFormImage" />

            <EditText
                android:id="@+id/editTextFormName"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormName" />

            <TextView
                android:id="@+id/textFormAge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/editTextFormAge"
                android:text="@string/form_age"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.123"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextFormName" />

            <EditText
                android:id="@+id/editTextFormAge"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="text"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormAge" />


            <TextView
                android:id="@+id/textFormGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/spinner"
                android:text="@string/form_gender"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.128"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editTextFormAge" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:entries="@array/gender_options"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:radius="10dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormGender" />


            <TextView
                android:id="@+id/textFormWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/editTextFormWeight"
                android:text="@string/form_weight"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.125"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner" />

            <EditText
                android:id="@+id/editTextFormWeight"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:inputType="number"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormWeight" />


            <TextView
                android:id="@+id/textFormBreed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/spinnerBreed"
                android:text="@string/form_breed"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.161"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextFormWeight" />

            <Spinner
                android:id="@+id/spinnerBreed"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:entries="@array/dog_breeds"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:radius="10dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormBreed" />

            <TextView
                android:id="@+id/textFormSubBreed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/spinnerSubBreed"
                android:text="@string/form_sub_breed"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.185"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerBreed" />

            <Spinner
                android:id="@+id/spinnerSubBreed"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:entries="@array/dog_subbreeds"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:radius="10dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormSubBreed" />

            <TextView
                android:id="@+id/textFormLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/spinnerLocation"
                android:text="@string/form_location"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.144"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerSubBreed" />

            <Spinner
                android:id="@+id/spinnerLocation"
                android:layout_width="320dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:entries="@array/argentine_provinces"
                android:fontFamily="@font/poppins_regular"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:radius="10dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormLocation" />

            <TextView
                android:id="@+id/textFormDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_bold"
                android:labelFor="@id/editTextFormDescription"
                android:text="@string/form_description"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.155"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinnerLocation" />

            <EditText
                android:id="@+id/editTextFormDescription"
                android:layout_width="320dp"
                android:layout_height="108dp"
                android:layout_marginTop="4dp"
                android:background="@drawable/ic_rounded_placeholder"
                android:ems="10"
                android:fontFamily="@font/poppins_regular"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="10dp"
                android:textAlignment="inherit"
                android:textColor="@color/text"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFormDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <Button
        android:id="@+id/saveButton"
        android:layout_width="320dp"
        android:layout_height="52dp"
        android:textSize="18sp"
        android:background="@drawable/rounded_button_background"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/form_button"
        android:textColor="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>