<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DogDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/dogDetailImage"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imagen_fondo_perro2"
            app:layout_constraintDimensionRatio="H,1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/coordinatorLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">
            <FrameLayout
                android:id="@+id/bottomSheet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:background="@color/background"
                android:elevation="5dp"
                app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

                <LinearLayout
                    android:id="@+id/bottomSheetLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/bottomSheetFirstRowLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:id="@+id/bottomSheetNameAndProvinceLayout"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/bottomSheetName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_bold"
                                android:text="Nombre"
                                android:textColor="@color/text"
                                android:textSize="24sp" />

                            <TextView
                                android:id="@+id/bottomSheetProvince"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:fontFamily="@font/poppins_regular"
                                android:text="Buenos Aires"
                                android:textColor="@color/text_light" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/bottomSheetAge"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:fontFamily="@font/poppins_regular"
                            android:gravity="center_vertical"
                            android:text="Edad"
                            android:textAlignment="viewEnd"
                            android:textColor="@color/text"
                            android:textSize="24sp"
                            tools:ignore="RtlCompat" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/bottomSheetStats"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:paddingHorizontal="16dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="72dp"
                            android:layout_height="64dp"
                            android:layout_margin="12dp"
                            android:elevation="8dp"
                            android:background="@color/card_background">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/bottomSheetSex"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="Male"
                                    android:textColor="@color/primary" />

                                <TextView
                                    android:id="@+id/bottomSheetSexLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dog_details_sex_label"
                                    android:textColor="@color/text_light"
                                    android:textSize="11sp" />
                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                        <androidx.cardview.widget.CardView
                            android:layout_width="72dp"
                            android:layout_height="64dp"
                            android:layout_margin="12dp"
                            android:elevation="8dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:orientation="vertical"
                                android:padding="8dp">

                                <TextView
                                    android:id="@+id/bottomSheetWeight"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="2kg"
                                    android:textColor="@color/primary" />

                                <TextView
                                    android:id="@+id/bottomSheetWeightLabel"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/dog_details_weight_label"
                                    android:textColor="@color/text_light"
                                    android:textSize="11sp" />
                            </LinearLayout>
                        </androidx.cardview.widget.CardView>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:padding="16dp">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:id="@+id/bottomSheetOwnerPicture"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/nav_header_image_user" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:orientation="vertical"
                                android:paddingStart="8dp">

                                <TextView
                                    android:id="@+id/bottomSheetOwnerLabel"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="@string/dog_details_owner_label"
                                    android:textColor="@color/text_light"
                                    android:textSize="10sp" />

                                <TextView
                                    android:id="@+id/bottomSheetOwner"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:fontFamily="@font/poppins_regular"
                                    android:text="Nombre del dueño"
                                    android:textColor="@color/text" />
                            </LinearLayout>

                        </LinearLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageButton
                                android:id="@+id/bottomSheetCallButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:layout_weight="1"
                                android:background="@color/transparent"
                                android:contentDescription="@string/dog_details_call_owner_placeholder"
                                android:scaleType="fitEnd"
                                android:src="@drawable/ic_phone"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:ignore="TouchTargetSizeCheck" />

                        </androidx.constraintlayout.widget.ConstraintLayout>

                    </LinearLayout>

                    <TextView
                        android:id="@+id/bottomSheetDogDescription"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/poppins_regular"
                        android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec rhoncus, quam nec suscipit viverra, leo augue porta diam, id eleifend tortor tellus sit amet quam. Quisque gravida magna quis elit elementum, eu varius ex tempus. Etiam quam purus, accumsan in lacinia ut, scelerisque quis urna. Donec lorem dui, cursus in sodales et, egestas non est. Integer rhoncus sem elit, non faucibus velit efficitur a. Integer at aliquet sapien. Duis egestas augue in condimentum hendrerit. Vivamus erat arcu, laoreet ac felis sed, mollis auctor urna. Sed suscipit vel ipsum eget rutrum. Aliquam efficitur quis nunc quis pretium."
                        android:textColor="@color/text"
                        android:padding="10dp"/>

                    <Button
                        android:id="@+id/bottomSheetAdoptButton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/dog_details_adopt_button"
                        android:layout_margin="4dp"/>

                </LinearLayout>
            </FrameLayout>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>